force-app/main/default/objects/Contact/fields/Mike_s_Fun_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Mike_s_Fun_Test_Field__c</fullName>
    <label>Mike&apos;s Fun Test Field</label>
    <length>10</length>
    <type>Text</type>
</CustomField>