force-app/main/default/objects/Contact/fields/Processed_Opportunity_Payment_Ids__c.field-meta.xml
<CustomField>
    <fullName>Processed_Opportunity_Payment_Ids__c</fullName>
    <label>Processed Opportunity Payment Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>