force-app/main/default/objects/Contact/fields/Selected_Degree_Information__c.field-meta.xml
<CustomField>
    <fullName>Selected_Degree_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Degree Information</label>
    <referenceTo>ucinn_ascendv2__Degree_Information__c</referenceTo>
    <relationshipLabel>Constituents</relationshipLabel>
    <relationshipName>Constituents</relationshipName>
    <type>Lookup</type>
</CustomField>