force-app/main/default/objects/Contact/fields/SFMC_Sync__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Sync__c</fullName>
    <description>Employee, Student, or (Contactable by Email, Is Active, and Pref Email is present)</description>
    <formula>OR(AND(HAM_Contactable_by_Email__c = true,HAM_Is_Active__c = true,HAM_PreferredEmail__c &lt;&gt; null),ucinn_ascendv2__Primary_Contact_Type__c = &apos;Student&apos;,ucinn_ascendv2__Primary_Contact_Type__c = &apos;Employee&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFMC_Sync</label>
    <type>Checkbox</type>
</CustomField>