force-app/main/default/objects/Contact/fields/Unsubscribe_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_Reason__c</fullName>
    <description>Reason for unsubscribe from Salesforce Marketing Cloud.</description>
    <inlineHelpText>Reason for unsubscribe from Salesforce Marketing Cloud.</inlineHelpText>
    <label>Unsubscribe Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>